Some work on audio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ elseif(UNIX)
     set(RTAUDIO_API_ALSA ON CACHE BOOL "" FORCE)
     set(RTAUDIO_API_JACK OFF CACHE BOOL "" FORCE)
     set(RTAUDIO_API_OSS OFF CACHE BOOL "" FORCE)
-    set(RTAUDIO_API_PULSE OFF CACHE BOOL "" FORCE)
+    set(RTAUDIO_API_PULSE ON CACHE BOOL "" FORCE)
 endif()
 
 FetchContent_Declare(
