--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "BTManager"]
 	path = BTManager
 	url = git@github.com:andrewmcdan/Companion-TheCube-BTManager.git
+[submodule "openwakeword"]
+	path = openwakeword
+	url = https://github.com/andrewmcdan/openwakeword
