--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -615,6 +615,15 @@ add_custom_command(
     COMMENT "Fetching build number from server..."
 )
 
+set(UPLOAD_ARTIFACT_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/upload_artifact.py")
+
+add_custom_command(
+    TARGET CubeCore POST_BUILD
+    COMMAND ${PYTHON_EXECUTABLE} "${UPLOAD_ARTIFACT_SCRIPT}" "${CMAKE_SOURCE_DIR}"
+    DEPENDS "${UPLOAD_ARTIFACT_SCRIPT}"
+    COMMENT "Uploading build to server..."
+)
+
 # Custom target that depends on the custom command
 # add_custom_target(
 #     FetchBuildNumber ALL
